manifests/dev/test-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-ingress
spec:
  ingressClassName: cnrp
  rules:
    - host: test.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-app-svc
                port:
                  number: 80
